[package]
name = "feature_flag"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
doctest = false

[dependencies]
launchdarkly-server-sdk = { workspace = true }
newtypes = { path = "../newtypes" }
thiserror = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
mockall = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
