[package]
name = "idv"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }


[dependencies]
newtypes = { path = "../newtypes" }
reqwest = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
uuid = { workspace=true }
levenshtein = "1.0.5"
twilio = { path = "../twilio"}
tracing = { workspace = true }
tokio = { workspace = true }
tokio-retry = "0.3"
tracing-test = "0.2.3"
strum = { workspace = true }
strum_macros = { workspace = true }
base64 = { workspace = true }
serde_urlencoded ="0.7.1"
async-trait = { workspace = true }
derive_more = { workspace = true }
url = "2.2.2"

[dev-dependencies]
test-case = "2.1.0"
actix-rt = "2.7.0"
mockall = "0.9.1"