[package]
name = "idv"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
doctest = false

[dependencies]
newtypes = { path = "../newtypes" }
selfie_doc = { path = "../selfie_doc" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
uuid = { workspace=true }
twilio = { path = "../twilio"}
tracing = { workspace = true }
tokio = { workspace = true }
tokio-retry = "0.3"
strum = { workspace = true }
strum_macros = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
url = "2.2.2"
serde_with = "2.2.0"
reqwest-middleware = "0.2.3"
reqwest-retry = "0.3.0"


[dev-dependencies]
test-case = { workspace = true }
actix-rt = "2.7.0"
mockall = {workspace = true}
dotenv = { workspace = true }
macros = { path = "../macros" }
tracing-test = "0.2.3"
image = "0.24.6"
base64 = {workspace = true}