[package]
name = "idv"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
doctest = false

[dependencies]
newtypes = { path = "../newtypes" }
selfie_doc = { path = "../selfie_doc" }
reqwest = { workspace = true }
serde = { workspace = true }
deunicode = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
uuid = { workspace=true }
twilio = { path = "../twilio"}
tracing = { workspace = true }
tokio = { workspace = true }
lazy_static = { workspace = true }
tokio-retry = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
regex = {workspace = true}
url = { workspace = true }
serde_with = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = "0.3.0"
reqwest-tracing = { workspace = true }
task-local-extensions = { workspace = true }


[dev-dependencies]
test-case = { workspace = true }
actix-rt = { workspace = true }
mockall = {workspace = true}
dotenv = { workspace = true }
macros = { path = "../macros" }
tracing-test = { workspace = true }
image = { workspace = true }
base64 = {workspace = true}
