[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
test-case-core = { workspace = true }
proc-macro-error = { workspace = true }
