[package]
name = "newtypes"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
serde = { workspace = true }
derive_more = "0.99.17"
paperclip = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
serde_derive = { workspace = true }
base64 = { workspace = true }
regex = "1.5"
async-trait = { workspace = true }
crypto = { path = "../enclave/crypto" }
lazy_static = "1.0"
uuid = { workspace = true }
schemars = { workspace = true }
itertools = { workspace = true }

# diesel
diesel = { workspace = true }
diesel-derive-newtype = { workspace = true }
diesel_migrations = { workspace = true }

diesel-derive-enum = { workspace = true }
diesel_as_jsonb = "1.0.0"

[dev-dependencies]
test-case = "2.1.0"