[package]
name = "newtypes"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
doctest = true

[dependencies]
serde = { workspace = true }
derive_more = { workspace = true }
paperclip = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
serde_derive = { workspace = true }
base64 = { workspace = true }
regex = "1.5"
async-trait = { workspace = true }
crypto = { path = "../enclave/crypto" }
lazy_static = "1.0"
uuid = { workspace = true }
itertools = { workspace = true }
reqwest = { workspace = true }
serde_with = "2.2.0"
either = { workspace = true }
mime = "0.3.16"
futures-util = { workspace = true }
futures = { workspace = true }
card-validate = "2.3"
enum_variant_type = { workspace = true }
tracing = { workspace = true }
macros = { path = "../macros" }
# diesel
diesel = { workspace = true }

diesel_as_jsonb = "1.0.0"
phonenumber = "0.3.3"
url = { workspace = true }
deunicode = "1.3.3"

email_address = "0.2.4"

[dev-dependencies]
test-case = { workspace = true }
