[package]
name = "newtypes"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
doctest = true

[dependencies]
serde = { workspace = true }
derive_more = { workspace = true }
paperclip = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
serde_derive = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
crypto = { path = "../enclave/crypto" }
lazy_static = { workspace = true }
uuid = { workspace = true }
itertools = { workspace = true }
reqwest = { workspace = true }
serde_with = { workspace = true }
either = { workspace = true }
mime = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
card-validate = { workspace = true }
enum_variant_type = { workspace = true }
tracing = { workspace = true }
macros = { path = "../macros" }
api_errors = { path = "../api/errors" }
rand = { workspace = true }
diesel = { workspace = true }
actix-web = { workspace = true }

diesel_as_jsonb = { workspace = true }
phonenumber = { workspace = true }
url = { workspace = true }
deunicode = { workspace = true }

email_address = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
