[package]
name = "privacy_pass"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
byteorder = { workspace = true }
blind-rsa-signatures = "0.13"
crypto = { path = "../enclave/crypto"}