[package]
name = "privacy_pass"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
byteorder = { workspace = true }
blind-rsa-signatures = { workspace = true }
crypto = { path = "../enclave/crypto"}
api_errors = { path = "../api/errors" }
