[package]
name = "actix-web-prom"
version = "0.6.0"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2021"
description = "Actix Web middleware to expose Prometheus metrics"
documentation = "https://docs.rs/actix-web-prom"
repository = "https://github.com/nlopes/actix-web-prom.git"
keywords = ["actix", "actix-web", "middleware", "prometheus", "web"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"
exclude = [".gitignore", ".github/", "README.tpl", "examples/"]

[dependencies]
actix-web = { workspace = true, features = ["macros"] }
futures-core = { workspace = true }
pin-project-lite = { workspace = true }
prometheus = { workspace = true }
