[package]
name = "selfie_doc"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }


[dependencies]
aws-types = { workspace = true }
aws-config = { workspace = true }
aws-sdk-rekognition = "0.33.0"
aws-sdk-textract = "0.33.0"
async-trait = { workspace = true }
thiserror = { workspace= true }
newtypes = { path = "../newtypes"}
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
dotenv = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
