[package]
name = "selfie_doc"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }


[dependencies]
aws-types = { workspace = true }
aws-config = { workspace = true }
aws-sdk-rekognition = { workspace = true }
aws-sdk-textract = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
newtypes = { path = "../newtypes" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
api_errors = { path = "../api/errors" }

[dev-dependencies]
dotenv = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
