[package]
name = "twilio"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true }
reqwest-tracing = { workspace = true }
tracing = { workspace = true }
reqwest-middleware = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tokio-retry = { workspace = true }
strum_macros = { workspace = true }
rand = { workspace = true }

newtypes = { path = "../newtypes" }
