[package]
name = "vault_dr"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_core= { path = "../api/core" }
api_errors = { path = "../api/errors" }
db = { path = "../db/core" }
newtypes = { path = "../newtypes" }

actix-web = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-types = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
