[package]
name = "vault_dr"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_core = { path = "../api/core" }
api_errors = { path = "../api/errors" }
db = { path = "../db/core" }
crypto = { path = "../enclave/crypto" }
newtypes = { path = "../newtypes" }
feature_flag = { path = "../feature_flag" }

actix-web = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-types = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

age = { workspace = true }
age-plugin = { workspace = true }
age-core = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
bech32 = { workspace = true }
p256 = { workspace = true, features = ["ecdh"] }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
