[package]
name = "ditto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1", features = ["full"] }
bytes = "1.3.0"
hyper = { version = "0.14", features = ["full"] }
rustls = { version = "0.20", default-features = false, features = ["dangerous_configuration"] }
tokio-rustls = { version = "0.23" }
futures-util = { version = "0.3", default-features = false }
webpki = { version = "0.22"}
rustls-pemfile = "1.0"
x509-parser = "0.14"