[package]
name = "ditto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
bytes = { workspace = true }
hyper = { workspace = true, features = ["full"] }
rustls = { workspace = true, features = ["dangerous_configuration"] }
tokio-rustls = { workspace = true }
futures-util = { workspace = true }
webpki = { workspace = true }
rustls-pemfile = { workspace = true }
x509-parser = { workspace = true }
