[package]
name = "footprint-dr"
version = "0.0.1"
authors.workspace = true

description = "CLI for interacting with the Footprint Vault Disaster Recovery system"
edition.workspace = true

[dependencies]
vault_dr_client = { path = "../../components/vault_dr_client" }

anyhow =  { workspace = true }
age =  { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-async = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
futures= { workspace = true }
log = { workspace = true }
rpassword = { workspace = true }
keyring = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
test-case = { workspace = true }
termcolor = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }


