[package]
name = "hooky"
version = "0.1.0"
edition = "2021"
description = "A simple services for testing webhooks with just HTTP"

[dependencies]
tokio = { version="1", features = ["full"] }
futures = "0.3"
base64 = "0.13"
thiserror = "1.0"
log = "0.4.8"
sha2 = "0.10.6"
hyper = { version = "0.14", features = ["full"] }
pretty_env_logger = "0.4"
dashmap = "5.4.0"