[package]
name = "hooky"
version = "0.1.0"
edition = "2021"
description = "A simple services for testing webhooks with just HTTP"

[dependencies]
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }
hyper = { workspace = true, features = ["full"] }
pretty_env_logger = { workspace = true }
dashmap = { workspace = true }
