[package]
name = "crypto"
version = "0.1.0"
edition = "2021"


[dependencies]
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
thiserror = "1.0"
hex = "0.4"
aes-gcm = "0.9.4"
sha2 = "0.10.2"
p256 = { version = "0.10.1", features = ["ecdh", "pem", "pkcs8"] }
rand_core = "0.6.3"
elliptic-curve = "0.11.12"
aead = "0.4.3"
sec1 = "0.2.1"
hmac = "0.12.1"