[package]
name = "enclave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-vsock = "0.3"
futures = "0.3"
libc = "0.2"
envconfig = "0.10.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_cbor = "0.11"
byteorder = "1.4"
env_logger = "0.9"