[package]
name = "enclave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["simulate"]
simulate = ["aws-types", "aws-config", "aws-sdk-kms"]
nitro = ["tokio-vsock"]


[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-vsock = { version = "0.3", optional = true }
futures = "0.3"
libc = "0.2"
envconfig = "0.10.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_cbor = "0.11"
byteorder = "1.4"
env_logger = "0.9"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
thiserror = "1.0"
crypto = { path = "../crypto" }
rpc = { path = "../rpc" }

aws-types = { version = "0.8", optional = true }
aws-config = { version = "0.8", optional = true }
aws-sdk-kms = { version = "0.8", optional = true }
